--- a/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Delete.cshtml
+++ b/TR5MidTerm/TR5MidTerm/Views/TR5MidTerm01/Delete.cshtml
@@ -11,14 +11,6 @@
 <h3 class="text-warning">請確認是否刪除此筆承租人設定？</h3>
 
 <div>
-
-    @*<div class="text-danger">
-            @Html.ValidationSummary(excludePropertyErrors: true, message: "", htmlAttributes: new { @class = "text-danger" })
-        </div>*@
-
-    @*<div id="ModelErrorDiv" class="validation-summary-valid text-danger">
-            <ul></ul>
-        </div>*@
     <div class="text-danger">
         @Html.ValidationSummary(
             excludePropertyErrors: true,
@@ -56,11 +48,14 @@
         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.修改人)</dt>
         <dd class="col-sm-10">@Html.DisplayFor(model => model.修改人)</dd>
 
-        <span asp-validation-for="承租人編號" class="text-danger"></span>
-        
+
 
     </dl>
-
+    <div class="mt-2">
+        <span asp-validation-for="承租人編號" class="text-danger"></span>
+        @*<button onclick="showCustomAlert()">點我</button>*@
+        <button class="btn btn-primary" onclick="showCustomAlert()">點我</button>
+    </div>
     <form asp-action="DeleteConfirmed">
         @Html.AntiForgeryToken()
 
@@ -76,10 +71,10 @@
             <a href="javascript:history.back()" class="btn btn-secondary">取消</a>
         </div>
     </form>
-    </div>
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    這行會載入並執行 _ValidationScriptsPartial.cshtml 這個部分視圖（partial view），作用是引用 用來處理用戶端驗證 的 JavaScript，例如 jQuery Validate。
-
 }
+
+
